# musa_api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  docker-compose.yml
docker/mysql/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
docker/mysql/musa/: __diesel_schema_migrations.frm  __diesel_schema_migrations.ibd  credentials.frm  credentials.ibd  tokens.frm  tokens.ibd  users.frm  users.ibd
docker/mysql/mysql/: columns_priv.MYI  db.MYI  engine_cost.ibd  event.MYI  func.MYI  innodb_index_stats.ibd  innodb_table_stats.ibd  ndb_binlog_index.MYI  proc.MYD  proc.MYI  procs_priv.MYI  proxies_priv.MYI  server_cost.ibd  tables_priv.MYD  tables_priv.MYI  user.MYD  user.MYI
docker/mysql/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  innodb_lock_waits.frm  io_by_thread_by_latency.frm  io_global_by_file_by_bytes.frm  io_global_by_file_by_latency.frm  io_global_by_wait_by_bytes.frm  io_global_by_wait_by_latency.frm  latest_file_io.frm  memory_by_host_by_current_bytes.frm  metrics.frm  (+85 more)
migrations/2020-01-25-155853_credentials/: down.sql  up.sql
src/: login.rs  main.rs  schema.rs
src/database/: callback.rs  credential.rs  mod.rs  models.rs  schema.rs  token.rs  user.rs
src/handler/: auth.rs  login.rs  mod.rs  player.rs  playlist.rs  search.rs
(+1 files in other folders)
