[package]
name = "musa_api"
version = "0.1.0"
authors = ["T.YAMASHITA <8256tako@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-redis = { version = "0.8.0", features = ["web"] }
actix-rt = "1.0.0"
actix-session = "0.3.0"
actix-web = "2.0.0"
better-panic = "0.2.0"
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
env_logger = "0.6.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
spotify_api = { git = "https://github.com/pyama2000/spotify_api", branch = "develop" }
